# react-native-carbon

./: .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  jest.config.json  package.json  react-native-carbon.podspec  reloadAndroid.sh  renovate.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativecarbon/: CarbonPackage.java  ColorComponent.java  ColorComponentDecoder.java  ColorType.java  DecodableObject.java  ElementProxyHandler.java  ElementProxyModule.java  EventUtils.java  FontObject.java  Gradient.java  PathCommand.java  PathObject.java  PixelUtils.java  QRNLayer.java  QRNLayerManager.java  SelectionsEngine.java  TextObject.java
android/src/main/java/com/reactnativecarbon/photon/: Circle.java  CircleVolume.java  ClearScreenTask.java  Composite.java  DrawBuffer.java  DrawTask.java  Kpi.java  KpiElement.java  LassoPaintTask.java  LayerElement.java  LayerSurfaceView.java  Line.java  LineSegment.java  PathComposite.java  PolygonVolume.java  QuitTask.java  Rectangle.java  RenderTask.java  SelectionTapTask.java  ShapeModifier.java  StartLassoTask.java  Task.java  TextComposite.java
ios/: Circle.swift  ColorComponent.swift  Composite.swift  DecoableObjects.swift  Element.swift  ElementProxy.m  ElementProxy.swift  LassoLayer.swift  LayerManager.m  LayerManager.swift  LayerView.swift  Line.swift  NotificationNames.swift  ObjectPool.swift  PathCommand.swift  PathComposite.swift  PathParser.swift  PathPen.swift  Polygon.swift  (+4 more)
(+117 files in other folders)
